UI improvements added
