# src/openapi/user-contract.yaml
@@ -116,15 +116,23 @@ paths:
           required: false
           schema:
             $ref: "#/components/schemas/Gender"
+        - in: query
+          name: page
+          required: true
+          schema:
+            type: integer
+        - in: query
+          name: size
+          required: true
+          schema:
+            type: integer
       responses:
         200:
           description: OK
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/UserDocumentDto'
+                $ref: '#/components/schemas/UserResponseDtoPageable'
         default:
           description: error payload
           content:
@@ -157,7 +165,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
     delete:
-      operationId: deleteUser
+      operationId: deleteUserById
       description: delete user
       parameters:
         - in: path
